This commit was made automatically at 6:41 PM, Tuesday, Feb 27, 2024 on the ISKCON-MYS-PC16 by pvpd. Files changed are: asset-manifest.json, index.html, static/js/main.62188935.js, static/js/main.62188935.js.LICENSE.txt, static/js/main.62188935.js.map, static/js/main.6e33b8b3.js, static/js/main.6e33b8b3.js.LICENSE.txt, static/js/main.6e33b8b3.js.map

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "FOLK Mysore",
-  "short_name": "FOLK Mysore",
+  "name": "SevaBase",
+  "short_name": "SevaBase",
   "start_url": "./login",
   "id": "FOLK",
   "theme_color": "#000",
