This commit was made automatically at 6:42 PM, Tuesday, Feb 27, 2024 on the ISKCON-MYS-PC16 by pvpd. Files changed are: manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "SevaBase",
   "short_name": "SevaBase",
   "start_url": "./login",
-  "id": "FOLK",
+  "id": "SevaBase",
   "theme_color": "#000",
   "scope": "./",
   "background_color": "#fff",
