This commit was made automatically at 1:38 PM, Wednesday, Feb 28, 2024 on the ISKCON-MYS-PC16 by pvpd. Files changed are: api/api.js, api/cdn.js, api/db.js, api/index.js, api/otp.js

--- a/.htaccess
+++ b/.htaccess
@@ -3,11 +3,16 @@
 </IfModule>
 
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.html$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule . /index.html [L]
+  RewriteEngine On
+  RewriteBase /
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-l
+  RewriteRule . /index.html [L]
 </IfModule>
+
+<Directory "api">
+  Options -Indexes
+  Deny from all
+</Directory>
