This commit was made automatically at 6:13 PM, Wednesday, Mar 6, 2024 on the ISKCON-MYS-PC8 by pvpd. Files changed are: asset-manifest.json, index.html, static/js/main.993ec74d.js, static/js/main.993ec74d.js.LICENSE.txt, static/js/main.993ec74d.js.map

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "FOLK Mysore",
-  "short_name": "FOLK Mysore",
+  "name": "SevaBase",
+  "short_name": "SevaBase",
   "start_url": "./login",
-  "id": "FOLK",
+  "id": "SevaBase",
   "theme_color": "#000",
   "scope": "./",
   "background_color": "#fff",
